fix problem with iso img visibility in footer. Change size of logos. fix problem with paddings and gaps in footer in mobile view

--- a/src/components/common/Carts/ContactCart/ContactCart.module.scss
+++ b/src/components/common/Carts/ContactCart/ContactCart.module.scss
@@ -45,6 +45,7 @@
       @include flex(row, center, flex-start);
       gap: 18px;
       margin-bottom: 30px;
+      margin-left: 20px;
       border: none;
 
       &:last-child {
