--- a/src/components/views/Contact/Contact.module.scss
+++ b/src/components/views/Contact/Contact.module.scss
@@ -29,7 +29,7 @@
   }
 
   @include sm-max {
-    padding: 10px;
+    padding: 20px 10px;
   }
 }
 
